# quant-ml-system-lab

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
docs/: ai_quant_strategy.md  architecture.md  benchmarks.md  career_strategy.md  deployment.md  experiments.md  learning_lab.md  monitoring.md  portfolio_artifacts.md  public_boundary.md  recruiting_notes.md  reproducibility.md  rl_trading_failure_analysis.md  rl_trading_research_notes.md  serving.md  strategy_candidate.md  validation.md
examples/: report_utils.py  run_baseline_vs_regime_filter.py  run_cvar_sizing_report.py  run_experiment_demo.py  run_hmm_sac_sizing.py  run_hmm_sac_training_validation.py  run_latency_benchmark.py  run_meta_label_readiness.py  run_monitoring_report.py  run_pair_rl_strategy.py  run_pair_rl_strategy_walk_forward.py  run_q_learning_gridworld.py  run_rl_sizing_comparison.py  run_sac_bandit.py  run_sample_backtest.py  run_strategy_allocator_sac_demo.py  run_strategy_allocator_sac_reward_ablation.py  run_strategy_allocator_sac_robustness.py  run_strategy_allocator_sac_walk_forward.py  run_strategy_candidate_benchmark.py  run_strategy_selector_demo.py  run_strategy_selector_dqn_demo.py  run_torch_sac_quadratic.py  run_walk_forward.py
tests/: test_api.py  test_benchmarking.py  test_data.py  test_experiments.py  test_hmm_rl.py  test_meta_labeling.py  test_monitoring.py  test_regime.py  test_risk.py  test_rl.py  test_sac.py  test_serving.py  test_sizing.py  test_strategy.py  test_strategy_candidate_benchmark.py  test_strategy_selector.py  test_torch_sac.py  (+5 more)
(+40 files in other folders)
